--- a/05-09/Tarefas/index.html
+++ b/05-09/Tarefas/index.html
@@ -13,25 +13,43 @@
                 <div id="right-col">
                     <div class="row one">
                         <div class="pokedex-item">
-                            <div class="circle large"></div>
-                            <div class="circle small"></div>
-                            <div class="circle small"></div>
-                            <div class="circle small"></div>
+                            <div id="line-left">
+                                <div class="circle-large">
+                                    <div class="circle-med"></div>
+                                </div>
+                                <div class="circle-small">
+                                    <div class="circle-tiny"></div>
+                                </div>
+                                <div class="circle-small">
+                                    <div class="circle-tiny"></div>
+                                </div>
+                                <div class="circle-small">
+                                    <div class="circle-tiny"></div>
+                                </div>
+                            </div>
+                            <div id="line-middle"></div>
+                            <div id="line-right">
+                                <div id="polygon">
+                                    
+                                </div>
+                            </div>
                         </div>
                     </div>
+
                     <div class="row two">
                         <div id="pokedex-painel">
                             <div class="pokedex-item">
-                                <div class="circle tiny"></div>
-                                <div class="circle tiny"></div>
+                                <div class="circle-tiny"></div>
+                                <div class="circle-tiny"></div>
                             </div>
                             <div class="pokedex-screen"></div>
                             <div class="pokedex-item">
-                                <div class="circle small"></div>
+                                <div class="circle-small"></div>
                                 <div class="item"></div>
                             </div>
                         </div>
                     </div>
+
                     <div class="row three">
                         <div class="pokedex-btn"></div>
                         <div class="pokedex-item">
@@ -41,20 +59,22 @@
                         <div class="pokedex-btn">
                             <div class="bar"></div>
                             <div class="bar"></div>
-                            <div class="circle small"></div>
+                            <div class="circle-small"></div>
                         </div>
                     </div>
                 </div>
+
                 <div id="middle-col">
                     <div id="pokedex-bar">
 
                     </div>
                 </div>
+
                 <div id="left-col">
                     <div class="row one">
                         <div class="pokedex-screen">
                             <form action="#" method="get">
-                                <input type="text" name="#" id="#">
+                                
                             </form>
                         </div>
                         <div class="pokedex-btn">
