--- a/05-09/Tarefas/index.html
+++ b/05-09/Tarefas/index.html
@@ -27,12 +27,9 @@
                                     <div class="circle-tiny"></div>
                                 </div>
                             </div>
-                            <div id="line-middle"></div>
-                            <div id="line-right">
-                                <div id="polygon">
-                                    
-                                </div>
-                            </div>
+                            <div class="line-middle"></div>
+                            <div class="line-middle"></div>
+                            <div id="line-right"></div>
                         </div>
                     </div>
 
@@ -44,41 +41,64 @@
                             </div>
                             <div class="pokedex-screen"></div>
                             <div class="pokedex-item">
-                                <div class="circle-small"></div>
-                                <div class="item"></div>
+                                <div class="circle-medium"></div>
+                                <div class="item">
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
 
                     <div class="row three">
-                        <div class="pokedex-btn"></div>
-                        <div class="pokedex-item">
-                            <div class="item"></div>
+                        <div class="col">
+                            <div id="pokedex-btn-circle"></div>
+                        </div>
+
+                        <div class="col">
+                            <div class="item">
+                                <div class="line"></div>
+                                <div class="line"></div>
+                            </div>
                             <div class="item screen"></div>
                         </div>
-                        <div class="pokedex-btn">
-                            <div class="bar"></div>
-                            <div class="bar"></div>
-                            <div class="circle-small"></div>
+
+                        <div class="col">
+                            <div id="pokedex-btn-plus">
+                                <div class="bar"></div>
+                                <div class="bar"></div>
+                                <div class="circle-small"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
 
                 <div id="middle-col">
-                    <div id="pokedex-bar">
-
-                    </div>
+                    <div id="pokedex-bar"></div>
+                    <div class="bar-item"></div>
+                    <div class="bar-item"></div>
                 </div>
 
                 <div id="left-col">
                     <div class="row one">
-                        <div class="pokedex-screen">
-                            <form action="#" method="get">
-                                
-                            </form>
-                        </div>
-                        <div class="pokedex-btn">
-
+                        <div id="line-top"></div>
+                        <div class="line-middle"></div>
+                        <div class="item">
+                            <div class="pokedex-screen"></div>
+                            <div class="pokedex-btn">
+                                <div class="btn-item"></div>
+                                <div class="btn-item"></div>
+                                <div class="btn-item"></div>
+                                <div class="btn-item"></div>
+                                <div class="btn-item"></div>
+                                <div class="btn-item"></div>
+                                <div class="btn-item"></div>
+                                <div class="btn-item"></div>
+                                <div class="btn-item"></div>
+                                <div class="btn-item"></div>
+                            </div>
                         </div>
                     </div>
                     <div class="row two">
