css 95% finalizado e começo do script

--- a/05-09/Tarefas/index.html
+++ b/05-09/Tarefas/index.html
@@ -29,6 +29,7 @@
                             </div>
                             <div class="line-middle"></div>
                             <div class="line-middle"></div>
+                            <div class="line-middle"></div>
                             <div id="line-right"></div>
                         </div>
                     </div>
@@ -39,7 +40,9 @@
                                 <div class="circle-tiny"></div>
                                 <div class="circle-tiny"></div>
                             </div>
-                            <div class="pokedex-screen"></div>
+                            <div class="pokedex-screen" style="color: #fff;">
+                                <span id="result" style="padding: 10px;">22</span>
+                            </div>
                             <div class="pokedex-item">
                                 <div class="circle-medium"></div>
                                 <div class="item">
@@ -77,8 +80,8 @@
 
                 <div id="middle-col">
                     <div id="pokedex-bar"></div>
-                    <div class="bar-item"></div>
-                    <div class="bar-item"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
                 </div>
 
                 <div id="left-col">
@@ -86,7 +89,12 @@
                         <div id="line-top"></div>
                         <div class="line-middle"></div>
                         <div class="item">
-                            <div class="pokedex-screen"></div>
+                            <div class="pokedex-screen">
+                                <span id="ability"></span>
+                                <span id="type">2</span>
+                                <span id="weakness">2</span>
+                                <span id="hp">2</span>
+                            </div>
                             <div class="pokedex-btn">
                                 <div class="btn-item"></div>
                                 <div class="btn-item"></div>
@@ -103,7 +111,29 @@
                     </div>
                     <div class="row two">
                         <div class="item">
-
+                            <div class="circle-item">
+                                <div class="circle-small"></div>
+                                <div class="circle-small"></div>
+                            </div>
+                            <div class="bar-item">
+                                <div class="bar"></div>
+                                <div class="bar"></div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="btn-item">
+                                <div class="pokedex-btn" id="go"></div>
+                                <div class="pokedex-btn" id="back"></div>
+                            </div>
+                            <div class="circle-item">
+                                <div class="circle-medium" id="start">
+                                    <div class="circle-small"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="pokedex-screen"></div>
+                            <div class="pokedex-screen"></div>
                         </div>
                     </div>
                 </div>
