--- a/05-09/Tarefas/index.html
+++ b/05-09/Tarefas/index.html
@@ -41,7 +41,8 @@
                                 <div class="circle-tiny"></div>
                             </div>
                             <div class="pokedex-screen" style="color: #fff;">
-                                <span id="result" style="padding: 10px;">22</span>
+                                <img src="">
+                                <span id="result"></span>
                             </div>
                             <div class="pokedex-item">
                                 <div class="circle-medium"></div>
@@ -65,7 +66,10 @@
                                 <div class="line"></div>
                                 <div class="line"></div>
                             </div>
-                            <div class="item screen"></div>
+                            <div class="item screen">
+                                <div id="pokemon-id"></div>
+                                <div id="pokemon-name"></div>
+                            </div>
                         </div>
 
                         <div class="col">
