--- a/10-10/T/index.html
+++ b/10-10/T/index.html
@@ -4,12 +4,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="stylesheet" href="style.css">
         <title>Posição</title>
     </head>
     <body>
         <div class="container">
-            
+            <div id="adress"></div>
+            <div id="atualPosition"></div>
         </div>
-        <script src="script.js"></script>
+        <script src="script.js" type="module"></script>
     </body>
 </html>
