--- a/10-10/T/index.html
+++ b/10-10/T/index.html
@@ -5,23 +5,24 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="stylesheet" href="style.css">
-        <title>GeoLocation</title>
+        <title>Geolocation</title>
     </head>
     <body>
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <div class="item">
+                    <div class="item one">
                         <div id="map"></div>
                     </div>
                 </div>
     
                 <div class="col">
-                    <div class="item">
+                    <div class="item two">
                         <span class="text">Localização atual:</span>
                         <span id="currentLocation"></span>
                     </div>
-                    <div class="item">
+
+                    <div class="item three">
                         <span class="text">Distância:</span>
                         <span id="distance"></span>
                     </div>
