Web workers & PWA

--- a/24-10/T/index.html
+++ b/24-10/T/index.html
@@ -10,6 +10,6 @@
     <div class="container">
         <div id="mensag"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="worker.js"></script>
 </body>
 </html>
