--- a/31-10/T/index.html
+++ b/31-10/T/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <div class="container">
-        <canvas width="600" height="600">
-            
-        </canvas>
-        <p></p>
+        <canvas width="600" height="600"></canvas>
+        <input type="file" name="#" id="file">
+
+        <a href="#">Baixar</a>
     </div>
     <script src="./script.js"></script>
 </body>
