--- a/31-10/T/index.html
+++ b/31-10/T/index.html
@@ -9,10 +9,15 @@
 </head>
 <body>
     <div class="container">
-        <canvas width="600" height="600"></canvas>
-        <input type="file" name="#" id="file">
-
-        <a href="#">Baixar</a>
+        <div class="stories-content">
+            <img src="./celular.png" alt="..." srcset="" width="400">
+            <canvas width="290" height="520"></canvas>
+        </div>
+        <div class="stories-items"> 
+            <input type="file" name="#" id="file">
+    
+            <a href="#">Baixar</a>
+        </div>
     </div>
     <script src="./script.js"></script>
 </body>
