--- a/31-10/T/index.html
+++ b/31-10/T/index.html
@@ -5,11 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
+        <script type="text/javascript" src="https://unpkg.com/webcam-easy/dist/webcam-easy.min.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <canvas width="280" height="520"></canvas>
-  
+    <div class="container">
+        <div id="screen-top">
+            <div id="painel">
+                <div id="painel-items">
+                    <input type="file" name="#" id="file">
+                    <a href="#" id="download">Baixar</a>
+                    <a href="#" id="download-picture">Tirar foto</a>
+                    <button id="btn">Iniciar</button>
+                    <video id="webcam" autoplay playsinline width="640" height="480"></video>
+                    <canvas id="canvas" class="d-none"></canvas>
+                </div>
+            </div>
+        </div>
+        <div id="screen-bottom">
+            <img src="./celular.png" alt="..." srcset="" width="560">
+            <canvas width="390" height="780" style="border: 1px solid;"></canvas>
+        </div>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
